examples/test/testpolicy12075.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12075
  namespace: namespace314
spec:
  podSelector:
    matchLabels:
      key29: value19
      key32: value0
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key35: value35
          key22: value46
          key7: value49
      podSelector:
        matchLabels:
          key27: value7
          key49: value28
